WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295711
REGRESSION(
296272@main
): WPT /webdriver/tests/classic/element_click/center_point.py
https://bugs.webkit.org/show_bug.cgi?id=295711
Summary
REGRESSION(296272@main): WPT /webdriver/tests/classic/element_click/center_po...
Sam Sneddon [:gsnedders]
Reported
2025-07-10 08:10:05 PDT
https://wpt.fyi/results/webdriver/tests/classic/element_click/center_point.py?run_id=5195385112100864&run_id=5992691432423424
This bisects to
296272@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Sam Sneddon [:gsnedders]
Comment 1
2025-07-10 11:54:32 PDT
rdar://155546487
Simon Fraser (smfr)
Comment 2
2025-07-11 16:54:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47923
EWS
Comment 3
2025-07-12 07:52:10 PDT
Committed
297303@main
(98369d3def89): <
https://commits.webkit.org/297303@main
> Reviewed commits have been landed. Closing PR #47923 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug