REGRESSION(296272@main): WPT /webdriver/tests/classic/element_click/center_point.py https://bugs.webkit.org/show_bug.cgi?id=295711 rdar://155546487

Reviewed by Devin Rousso and BJ Burg.

After 296272@main `Widget::convertFromRootView()` did point conversion in floating point,
preserving the (0.5, 0.5) center point of a 1x1 element. This affected the result
of `WebAutomationSessionProxy::computeElementLayout()` which computes the element center point;
this caused events, which uses rounded coords, to either miss the 1x1 element, or not match the
computed center point of elements with odd-sized dimensions.

Fix by flooring in `computeElementLayout()`, which matches the behavior specified for computing
an element's in-view center point at https://w3c.github.io/webdriver/#interactability.

* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::computeElementLayout):

Canonical link: https://commits.webkit.org/297303@main